# dungeon-os

./: .gitignore  FUZZY_SEARCH_IMPLEMENTATION.md  Gemini-AI Dungeon Master as Agentic System.md  Gemini-Temporary Chat.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
dnd_api/: README.md  __init__.py  __main__.py  api.py  cache_warmup.py  fuzzy.py
dnd_api/commands/: __init__.py  cache_cmd.py  get.py  info.py  list.py  random.py  search.py
dnd_cli/: README.md  __main__.py  api.py  cache.py  cache_warmup.py  text_search.py
dnd_cli/commands/: __init__.py  cache_cmd.py  get.py  info.py  list.py  random.py  search.py
dungeon-os/: AGENTS.md  README.md
dungeon-os/.claude/skills/character-creation/: SKILL.md
dungeon-os/.claude/skills/combat/: SKILL.md
dungeon-os/.claude/skills/exploration/: SKILL.md
dungeon-os/.claude/skills/magic/: SKILL.md
dungeon-os/.claude/skills/social/: SKILL.md
dungeon-os/.claude/skills/worldbuilding/: SKILL.md
dungeon-os/campaigns/example-campaign/: state.json
dungeon-os/campaigns/example-campaign/characters/: aragorn.json  legolas.json
dungeon-os/campaigns/example-campaign/players/: player1.json
dungeon-os/campaigns/template/: config.json
dungeon-os/schemas/: character.schema.json  player.schema.json  state.schema.json
game/: README.md
game/.claude/skills/character-advancement/: SKILL.md
game/campaigns/: active.json
game/campaigns/example-campaign/: config.json  session_log.md
game/campaigns/template/: session_log.md  state.json
game/schemas/: location.schema.json  npc.schema.json
(+6 files in other folders)
