[project]
name = "dungeon-os"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "pyparsing>=3.3.2",
    "roll-cli>=2.0.0",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
dnd-cli = "dnd_cli.__main__:main"

[tool.uv]
package = true
